v8.0.2
- Stop timeline from growing when in-progress recording finish at the backend
- Logic changes for the -1 Kodi uses to indicated a "watched" recording

v8.0.1
- Rework backend request logic
- Improved security model on logout/login
- Added logic to handle fast server restarts
- When http file is not seekable, force pts start and end to be the same

v8.0.0
- Update PVR API 7.0.2

v7.1.1
- Add drive space options in v5

v7.1.0
- Remove p8-platform dependency

v7.0.2
- Add cast and crew from NextPVR 5.0.9
- Fix regression in discovery

v7.0.1
- Protect against out media calls from Kodi on closed files
- Formalize and test manual https support
- Add new recording metadata (year, firstAired)

v7.0.0
- Update GUI API 5.15.0
- Remove not used source file
- Fix some compile warnings by add of ATTRIBUTE_HIDDEN

v6.2.1
- Modified client timeshift buffer for fast tuners
- Refactor changes for 6.2.0
- Read should be ssize_t

v6.2.0
- Move to tinyxml2
- Connection improvements when server is stopped or client sleeps
- Menu hooks for WOL and open settings
- New backend call with better error handling, option to turn off br compression
- Update EPG when backend changes
- Reduce unnecessary timer and recording updates
- Auto detect localhost with other servers

v6.1.0
- Connection state improvements for established connections
- Allow creation of season folders
- Optional use of EPG-based text or DVB genres

v6.0.5
- Add libp8-platform-dev as dependency

v6.0.4
- Get rid of external kodiplatform dependency

v6.0.3
- Optionally use timeshifted transcoded streaming via inputstream.ffmpegdirect
- Fix for incorect OnSystemWake loop exit after c++ conversion change
- The prebuffer slider was not matched with the correct selection

v6.0.2
- Fix default port
- In-progress recordings change
- Adjust timer and recording tag uid
- Update setting with backend version

v6.0.1
- ConnectionStateChange needs a string message
- assign menuhooks on success only

v6.0.0